# rgbs

./: .gitignore  Cargo.toml  Plan.md  README.md  STATUS.md
crates/rgbs-builder/: Cargo.toml
crates/rgbs-builder/src/: lib.rs
crates/rgbs-cli/: Cargo.toml  build.rs
crates/rgbs-cli/src/: main.rs
crates/rgbs-common/: Cargo.toml
crates/rgbs-common/src/: lib.rs
crates/rgbs-config/: Cargo.toml
crates/rgbs-config/src/: lib.rs
crates/rgbs-repo/: Cargo.toml
crates/rgbs-repo/src/: lib.rs
crates/rgbs-resolver/: Cargo.toml
crates/rgbs-resolver/src/: lib.rs
crates/rgbs-spec/: Cargo.toml
crates/rgbs-spec/src/: lib.rs
