[workspace]
members = [
    "crates/rgbs-builder",
    "crates/rgbs-cli",
    "crates/rgbs-common",
    "crates/rgbs-config",
    "crates/rgbs-repo",
    "crates/rgbs-resolver",
    "crates/rgbs-spec",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "GPL-2.0-only"

[workspace.dependencies]
base64 = "0.22.1"
bzip2 = "0.5.2"
clap = { version = "4.5.32", features = ["derive"] }
flate2 = "1.1.0"
hex = "0.4.3"
indexmap = { version = "2.8.0", features = ["serde"] }
libc = "0.2.171"
rattler_libsolv_c = { path = "vendor/rattler_libsolv_c" }
roxmltree = "0.20.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
tempfile = "3.19.1"
thiserror = "2.0.12"
ureq = "2.12.1"
url = { version = "2.5.4", features = ["serde"] }
walkdir = "2.5.0"
xz2 = "0.1.7"
zstd = "0.13.3"
