[package]
name = "rgbs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "rgbs"
path = "src/main.rs"

[dependencies]
clap.workspace = true
rgbs-builder = { path = "../rgbs-builder" }
rgbs-common = { path = "../rgbs-common" }
rgbs-config = { path = "../rgbs-config" }
serde_json.workspace = true
