[package]
name = "rgbs-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
bzip2.workspace = true
indexmap.workspace = true
rgbs-common = { path = "../rgbs-common" }
serde.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
