[package]
name = "rgbs-repo"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
bzip2.workspace = true
flate2.workspace = true
rgbs-common = { path = "../rgbs-common" }
rgbs-config = { path = "../rgbs-config" }
roxmltree.workspace = true
serde.workspace = true
sha2.workspace = true
ureq.workspace = true
url.workspace = true
xz2.workspace = true
zstd.workspace = true

[dev-dependencies]
tempfile.workspace = true
